--- a/lokaverkefni/styles.css
+++ b/lokaverkefni/styles.css
@@ -46,11 +46,27 @@ label {
 }
 
 input[type="submit"] {
-       margin-left:132px;
+       margin-left:50px;
+}
+input[type="submit"]::before {
+    content: "Leita að mynd"
 }
 img {
     border: 1px solid #ddd;
     border-radius: 4px;
     padding: 5px;
     width: 300px;
+}
+.thumb{
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+    width: 54px;
+}
+.galleryImage{
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+    width: 300px;
+    height: 300px;
 }
